# multagentai2thor

./: -d  .gitignore  AGENTS_TASK_TEST_MATRIX.md  PROJECT_ARCHITECTURE_DRAFT.md  PROJECT_FILE_MAP.md  README.md  RELAY_TASK_SERVICE.md  TUTORIAL.md  ai2thor_receiver_server.py  custom_run.py  emas_relay_bridge.py  emas_relay_smoke.py  generate_procthor_dataset.py  getreachable_path_planning.md  jiekou.md  move_run.py  multi_agent_env.py  procthor_benchmark.py  relay_closed_loop_design_cn.md  relay_task_server.py  run.py  run_relay_task_server.sh  sync.sh  vla_run.py  vla_run.sh
EmbodiedGPT_Pytorch/: INSTALLATION.md  README.md  auto_scene_actions.sh  pyproject.toml  requirements.txt
EmbodiedGPT_Pytorch/demo/: auto_scene_actions.py  plan_media.py  qwen35_backend.py  relay_agent.py  run_chat.py
EmbodiedGPT_Pytorch/robohusky/model/: modeling_husky_embody2.py
EmbodiedGPT_Pytorch/tests/: test_plan_media.py  test_relay_agent.py  test_relay_agent_closed_loop.py  test_relay_agent_integration.py
agents/: __init__.py  base_agent.py  colleague_agent_stub.py  custom_agent.py  dummy_agent.py  vla_agent.py
scripts/: agents_smoke_test.py
tests/: test_ai2thor_navigation_planner.py  test_emas_relay_bridge.py  test_relay_task_server.py
tests/fixtures/: emas_bread_pickup_assignment.json  emas_open_fridge_assignment.json
